// Vitest Snapshot v1

exports[`Overriding templates > should use an override template if one exists 1`] = `
"# This is an override template
Example ADR
2022-06-22
2
Accepted"
`;

exports[`Overriding templates > should use an override template if one exists 2`] = `
"# This is an override template
Another Example ADR
2022-06-22
3
Accepted"
`;
